--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="file:///Users/andrewtownsend/Desktop/startbootstrap-clean-blog-gh-pages/scratch.html" target="_blank">
+                                <a href="scratch.html">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
