--- a/scratch.html
+++ b/scratch.html
@@ -47,7 +47,9 @@
     <br>
     <br>
     <!-- text -->
-    <div class="mainbody">
+    <div class="mainbody righthyperlink">
+        <a href="#vd">Video</a><br>
+        <a href="#dgrm">Diagram</a><br>
         <p>Once upon a time, in a galaxy far, far away, there was a Sith Lord named Darth Plagueis the Wise. He was known for his mastery of the dark side of the Force and his immense power in manipulating the Force to create and sustain life. Darth Plagueis was a legendary figure among the Sith, and his abilities were feared and respected by his fellow Sith Lords.</p>
         <p>Darth Plagueis was obsessed with immortality and sought ways to cheat death. He believed that the dark side of the Force held the key to unlocking this ultimate power. He conducted dark experiments and delved into forbidden knowledge to achieve his goal of immortality.
         </p>
@@ -64,7 +66,7 @@
     <!-- youtube link to video of Palpatine sharing the legend -->
         <br>
             <div class="righthyperlink">
-                <a href="https://www.youtube.com/watch?v=05dT34hGRdg" target="_blank">
+                <a id="vd" href="https://www.youtube.com/watch?v=05dT34hGRdg" target="_blank">
                     Palpatine shares the tragedy with young Jedi.
                 </a>
             </div>
@@ -77,6 +79,7 @@
         <br>
         <br>
         <!-- Tableau -->
+        <p id="dgrm">Diagram</p>
             <div class='tableauPlaceholder' id='viz1682383221282' style='position: relative; width: 100%;'>
                 <noscript>
                     <a href='#'>
